CALC - added feature

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,14 @@
    
     <title>React App</title>
   </head>
+  <style>
+    body{
+      background: linear-gradient(45deg, #b1f0ce, #31c476);
+    }
+    @media (max-width: 900px) {
+      .container{  width: 100% !important}
+    }
+  </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
